k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salepartido-backend
  namespace: salepartido
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salepartido-backend
  template:
    metadata:
      labels:
        app: salepartido-backend
    spec:
      containers:
      - name: backend
        image: salepartido-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: salepartido-backend
  namespace: salepartido
spec:
  type: NodePort
  selector:
    app: salepartido-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32328
